--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
 <body>
-    
+    <div class="flex-container">
+        <div class="left-box">
+            <div class="logo-container">
+                <img class="logo-image" src="" alt="">
+                <div class="logo-text"></div>
+            </div>
+        </div>
+
+        <div class="right-box">
+            <header>
+
+            </header>
+            <form action="">
+
+            </form>
+            <footer>
+                
+            </footer>
+        </div>
+    </div>
 </body>
 </html>
