--- a/index.html
+++ b/index.html
@@ -6,25 +6,26 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
 <body>
-    <div class="flex-container">
-        <div class="left-box">
-            <div class="logo-container">
-                <img class="logo-image" src="" alt="">
-                <div class="logo-text"></div>
-            </div>
+    <div class="left-box">
+        <div class="logo-container">
+            <img class="logo-image" src="templates/odin-lined.png" alt="Mail logo">
+            <div class="logo-text"><span>Sign up</span></div>
         </div>
-
-        <div class="right-box">
-            <header>
-
-            </header>
-            <form action="">
-
-            </form>
-            <footer>
-                
-            </footer>
+        <div class="img-author">
+            Photo by somebody idk
         </div>
+    </div>
+
+    <div class="right-box">
+        <header>
+
+        </header>
+        <form action="">
+
+        </form>
+        <footer>
+
+        </footer>
     </div>
 </body>
 </html>
