Finish styling right box header

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
     <div class="right-box">
         <header>
-
+            <p>This is not a real online service. I made this to learn about intermediate HTML/CSS.</p>
+            <p>But feel free to sign up if you want to.</p>
         </header>
         <form action="">
 
