--- a/index.html
+++ b/index.html
@@ -22,7 +22,37 @@
             <p>But feel free to sign up if you want to.</p>
         </header>
         <form action="">
-
+            <label>Let's sign you up</label>
+            <div class="input-row">
+                <div>
+                    <label for="first-name">FIRST NAME</label>
+                    <input type="text" name="first-name" id="first-name">
+                </div>
+                <div>
+                    <label for="last-name">LAST NAME</label>
+                    <input type="text" name="last-name" id="last-name">
+                </div>
+            </div>
+            <div class="input-row">
+                <div>
+                    <label for="email">EMAIL</label>
+                    <input type="email" name="email" id="email">
+                </div>
+                <div>
+                    <label for="phone-number">PHONE NUMBER</label>
+                    <input type="number" name="phone-number" id="phone-number">
+                </div>
+            </div>
+            <div class="input-row">
+                <div>
+                    <label for="password">PASSWORD</label>
+                    <input type="password" name="password" id="password">
+                </div>
+                <div>
+                    <label for="confirm-password">CONFIRM PASSWORD</label>
+                    <input type="password" name="confirm-password" id="confirm-password">
+                </div>
+            </div>
         </form>
         <footer>
 
