Finish page styling

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
             </div>
         </form>
         <footer>
-
+            <button>Create Account</button>
+            <div class="footer-text">Already have an account? <span>Log in</span></div>
         </footer>
     </div>
 </body>
